[package]
name = "read_json"
version = "0.1.0"
authors = ["Charles ORiley <ceoriley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
serde = { version = "1.0.116", features = [ "derive" ] }
serde_json = "1.0.57"
serde_derive = "1.0.116"
permutohedron = "0.2.4"
chrono = { version = "0.4.15", features = ["serde"] }
log = "0.4.11"
log4rs = "0.13.0"
csv = "1.1.3"
